--- a/firstServerleess/package.json
+++ b/firstServerleess/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@middy/core": "^2.5.3",
-    "@middy/http-json-body-parser": "^2.5.3"
+    "@middy/http-json-body-parser": "^2.5.3",
+    "aws-sdk": "^2.1139.0"
   },
   "devDependencies": {
     "@serverless/typescript": "^3.0.0",
