directory name fixed

--- a/.github/workflows/deploy-master.yml
+++ b/.github/workflows/deploy-master.yml
@@ -6,7 +6,7 @@ on:
       - master
 defaults:
  run:
-  working-directory: ./firstServerless
+  working-directory: ./firstServerleess
 
 jobs:
   deploy:
