--- a/.github/workflows/deploy-master.yml
+++ b/.github/workflows/deploy-master.yml
@@ -21,6 +21,8 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
+    - name: install
+      run: npm install
     - run: npm ci
     - name: Install Plugin and Deploy
       uses: serverless/github-action@v3.1
