--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,10 +8,9 @@
     "removeComments": true,
     "sourceMap": true,
     "target": "ES2020",
-    "outDir": "lib",
-    "allowJs": true
+    "outDir": "lib"
   },
-  "include": ["src/**/*.ts", "serverless.ts", "./*"],
+  "include": ["src/**/*.ts", "serverless.ts"],
   "exclude": [
     "node_modules/**/*",
     ".serverless/**/*",
