--- a/package.json
+++ b/package.json
@@ -1,7 +1,28 @@
 {
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/sequelize": "^4.28.14",
     "esbuild": "^0.14.25",
-    "serverless-esbuild": "^1.25.0"
+    "nodemon": "^2.0.19",
+    "serverless-esbuild": "^1.25.0",
+    "ts-node": "^10.8.2",
+    "typescript": "^4.7.4"
   },
-  "name": "aws-node-typescript"
+  "name": "aws-node-typescript",
+  "version": "1.0.0",
+  "description": "Node Typescript Rest Api Project",
+  "author": "https://www.github.com/Vitaee",
+  "main": "server.ts",
+  "type": "module",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.21.2",
+    "serverless-http": "^3.0.1"
+  }
 }
