--- a/.github/workflows/deploy-master.yml
+++ b/.github/workflows/deploy-master.yml
@@ -18,13 +18,13 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-    - name: install
+    - name: install package json
       run: npm install
     - run: npm ci
     - name: Install Plugin and Deploy
       uses: serverless/github-action@v3.1
       with:
-        args: -c "serverless plugin install --name serverless-esbuild && serverless deploy"
+        args: -c "serverless plugin install --name serverless-offline && serverless deploy"
         entrypoint: /bin/sh
       env:
          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
