--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/sequelize": "^4.28.14",
-    "esbuild": "^0.14.25",
+    "esbuild": "^0.14.48",
     "nodemon": "^2.0.19",
-    "serverless-esbuild": "^1.25.0",
+    "serverless-esbuild": "^1.31.0",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
   },
@@ -14,13 +14,19 @@
   "version": "1.0.0",
   "description": "Node Typescript Rest Api Project",
   "author": "https://www.github.com/Vitaee",
+  "scripts": {
+    "dev": "cross-env NODE_ENV=development sls offline start --stage offline"
+  },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.2",
-    "serverless-http": "^3.0.1"
+    "serverless-http": "^3.0.1",
+    "serverless-offline": "^8.8.0",
+    "serverless-plugin-typescript-express": "^1.0.8"
   }
 }
