--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "description": "Node Typescript Rest Api Project",
   "author": "https://www.github.com/Vitaee",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development sls offline start --stage offline"
+    "dev": "cross-env NODE_ENV=development SERVER_PORT=3001 sls offline start --stage offline"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.2",
+    "sequelize-typescript": "^2.1.3",
     "serverless-http": "^3.0.1",
     "serverless-offline": "^8.8.0",
     "serverless-plugin-typescript-express": "^1.0.8"
