--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
-    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.21.2",
     "sequelize-typescript": "^2.1.3",
     "serverless-http": "^3.0.1",
     "serverless-offline": "^8.8.0",
     "serverless-plugin-typescript-express": "^1.0.8"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.3.2"
   }
 }
