--- a/.github/workflows/deploy-master.yml
+++ b/.github/workflows/deploy-master.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Install Plugin and Deploy
       uses: serverless/github-action@v3.1
       with:
-        args: -c "serverless plugin install --name serverless-esbuild serverless-offline && serverless deploy"
+        args: -c "serverless plugin install --name serverless-esbuild serverless-dotenv-plugin serverless-offline && serverless deploy"
         entrypoint: /bin/sh
       env:
          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
