--- a/.github/workflows/deploy-master.yml
+++ b/.github/workflows/deploy-master.yml
@@ -24,8 +24,10 @@ jobs:
     - name: Install Plugin and Deploy
       uses: serverless/github-action@v3.1
       with:
-        args: -c "serverless plugin install --name serverless-esbuild serverless-dotenv-plugin serverless-offline && serverless deploy"
         entrypoint: /bin/sh
+        run: | 
+          chmod +x ./deploy_lambdas.sh
+          ./deploy_lambdas.sh
       env:
          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
