--- a/serverless.yml
+++ b/serverless.yml
@@ -17,8 +17,10 @@ provider:
 functions:
   api:
     handler: server.handler
+    environment: ${file(./env.json)}
     events:
       - httpApi: '*'
+
 
 
 plugins:
