--- a/.github/workflows/deploy-master.yml
+++ b/.github/workflows/deploy-master.yml
@@ -21,14 +21,11 @@ jobs:
     - name: install package json
       run: npm install
     - run: npm ci
-    - name: Serverless Config
+    - name: Serverless Deployment
       uses: serverless/github-action@v3.1
       with:
         entrypoint: /bin/sh
-    - name: Run sh script
-      run: | 
-        chmod +x ./deploy_lambdas.sh
-        ./deploy_lambdas.sh
+        args: -c "sh ./deploy_lambdas.sh"
       env:
          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
