--- a/.github/workflows/deploy-master.yml
+++ b/.github/workflows/deploy-master.yml
@@ -22,7 +22,7 @@ jobs:
       run: npm install
     - run: npm ci
     - name: Serverless Deployment
-    - uses: serverless/github-action@v3.1
+      uses: serverless/github-action@v3.1
     - uses: unfor19/install-aws-cli-action@master
       with:
         entrypoint: /bin/sh
