--- a/.github/workflows/deploy-master.yml
+++ b/.github/workflows/deploy-master.yml
@@ -14,7 +14,6 @@ jobs:
         node-version: [14.x]
     steps:
     - uses: actions/checkout@v3
-    - uses: unfor19/install-aws-cli-action@master
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
@@ -22,6 +21,13 @@ jobs:
     - name: install package json
       run: npm install
     - run: npm ci
+    - name: Install aws s3
+      uses:  unfor19/install-aws-cli-action@master
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      with:
+        args: aws s3 cp s3://awsbucketvitae/env.json
     - name: Serverless Deployment
       uses: serverless/github-action@v3.1
       with:
