--- a/.github/workflows/deploy-master.yml
+++ b/.github/workflows/deploy-master.yml
@@ -27,7 +27,7 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       with:
-        args: aws s3 cp s3://awsbucketvitae/env.json
+        args: -c "aws s3 cp s3://awsbucketvitae/env.json"
     - name: Serverless Deployment
       uses: serverless/github-action@v3.1
       with:
