--- a/.github/workflows/deploy-master.yml
+++ b/.github/workflows/deploy-master.yml
@@ -23,11 +23,12 @@ jobs:
     - run: npm ci
     - name: Install aws s3
       uses:  unfor19/install-aws-cli-action@master
+      with:
+        entrypoint: /bin/sh
+        args: -c "aws s3 cp s3://awsbucketvitae/env.json"
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      with:
-        args: -c "aws s3 cp s3://awsbucketvitae/env.json"
     - name: Serverless Deployment
       uses: serverless/github-action@v3.1
       with:
