--- a/.github/workflows/deploy-master.yml
+++ b/.github/workflows/deploy-master.yml
@@ -27,7 +27,7 @@ jobs:
       uses: serverless/github-action@v3.1
       with:
         entrypoint: /bin/sh
-        args: -c "aws s3 cp s3://awsbucketvitae/env.json && sh ./deploy_lambdas.sh"
+        args: -c "/usr/local/bin/aws s3 cp s3://awsbucketvitae/env.json && sh ./deploy_lambdas.sh"
       env:
          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
