--- a/serverless.yml
+++ b/serverless.yml
@@ -17,7 +17,7 @@ provider:
 functions:
   api:
     handler: server.handler
-    environment: ${file(./env.json)}
+    environment: ${file(env.json)}
     events:
       - httpApi: '*'
 
