--- a/serverless.yml
+++ b/serverless.yml
@@ -18,11 +18,11 @@ functions:
   api:
     handler: server.handler
     environment:
-      DB_NAME: {self:custom.env.DB_NAME}
-      DB_USER: {self:custom.env.DB_USER}
-      DB_PASS: {self:custom.env.DB_PASS}
-      DB_HOST: {self:custom.env.DB_HOST}
-      DB_PORT: {self:custom.env.DB_PORT}
+      DB_NAME: ${${self:custom.env}:DB_NAME}
+      DB_USER: ${${self:custom.env}:DB_USER}
+      DB_PASS: ${${self:custom.env}:DB_PASS}
+      DB_HOST: ${${self:custom.env}:DB_HOST}
+      DB_PORT: ${${self:custom.env}:DB_PORT}
     events:
       - httpApi: '*'
 
