--- a/.github/workflows/deploy-master.yml
+++ b/.github/workflows/deploy-master.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Serverless Deployment
       uses: serverless/github-action@v3.1
       with:
-        args: -c "/usr/local/bin/aws s3 cp s3://awsbucketvitae/env.json && ls && sh ./deploy_lambdas.sh"
+        args: -c "/usr/local/bin/aws s3 cp s3://awsbucketvitae/env.json && serverless plugin install --name serverless-esbuild serverless-dotenv-plugin serverless-offline && serverless deploy && rm env.json"
       env:
          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
