--- a/.github/workflows/deploy-master.yml
+++ b/.github/workflows/deploy-master.yml
@@ -25,8 +25,9 @@ jobs:
       uses:  unfor19/install-aws-cli-action@master
     - name: Serverless Deployment
       uses: serverless/github-action@v3.1
-      with:
-        args: -c "/usr/local/bin/aws s3 cp s3://awsbucketvitae/env.json && serverless plugin install --name serverless-esbuild serverless-dotenv-plugin serverless-offline && serverless deploy && rm env.json"
+      with: # sudo mv /home/martin/Downloads/strategies/settings.txt /home/martin/ft_userdata/strategies/
+
+        args: -c "/usr/local/bin/aws s3 cp s3://awsbucketvitae/env.json && sudo mv env.json /bin/sh && cd && cd /bin/sh && serverless plugin install --name serverless-esbuild serverless-dotenv-plugin serverless-offline && serverless deploy && rm env.json"
       env:
          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
