--- a/.github/workflows/deploy-master.yml
+++ b/.github/workflows/deploy-master.yml
@@ -9,6 +9,9 @@ jobs:
   deploy:
     name: deploy
     runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     strategy:
       matrix:
         node-version: [14.x]
@@ -20,14 +23,19 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: install package json
       run: npm install
-    - run: npm ci
-    - name: Install aws s3
-      uses:  unfor19/install-aws-cli-action@master
+    - name: NPM CI command
+      run: npm ci
+    - name: Install aws s3 cli 
+      run:  |
+        sudo apt install awscli
+    - name: Download env.json file
+      run: |
+        /usr/local/bin/aws s3 cp s3://awsbucketvitae/env.json .
     - name: Serverless Deployment
       uses: serverless/github-action@v3.1
-      with: # sudo mv /home/martin/Downloads/strategies/settings.txt /home/martin/ft_userdata/strategies/
-
-        args: -c "/usr/local/bin/aws s3 cp s3://awsbucketvitae/env.json && sudo mv env.json /bin/sh && cd && cd /bin/sh && serverless plugin install --name serverless-esbuild serverless-dotenv-plugin serverless-offline && serverless deploy && rm env.json"
-      env:
-         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      with:
+        args: -c "serverless plugin install --name serverless-esbuild serverless-dotenv-plugin serverless-offline && serverless deploy"
+    - name: Remove env json file
+      run: |
+        sudo rm env.json
+      
