--- a/.github/workflows/deploy-master.yml
+++ b/.github/workflows/deploy-master.yml
@@ -33,7 +33,7 @@ jobs:
         /usr/local/bin/aws --region us-east-1 s3 cp s3://awsbucketvitae/env.json .
     - name: Move json file to project directory
       run: |
-        sudo mv env.json ${{ inputs.working_directory }}
+        sudo mv env.json /home/runner/work/NodeServerless/NodeServerless
     - name: Serverless Deployment
       uses: serverless/github-action@v3.1
       with:
