--- a/serverless.yml
+++ b/serverless.yml
@@ -5,7 +5,8 @@ custom:
   serverless-offline:
     httpPort: 4000
     noPrependStageInUrl: true
-  env: ${file(./env.json)}
+  #env: ${file(./env.json)}
+  env: ${s3:awsbucketvitae/env.json}
 provider:
   name: aws
   runtime: nodejs14.x
