--- a/serverless.yml
+++ b/serverless.yml
@@ -5,7 +5,6 @@ custom:
   serverless-offline:
     httpPort: 4000
     noPrependStageInUrl: true
-  env: ${file(./env.json)}
     
 provider:
   name: aws
@@ -19,11 +18,11 @@ functions:
   api:
     handler: server.handler
     environment:
-      DB_NAME: ${${self:custom.env}:DB_NAME}
-      DB_USER: ${${self:custom.env}:DB_USER}
-      DB_PASS: ${${self:custom.env}:DB_PASS}
-      DB_HOST: ${${self:custom.env}:DB_HOST}
-      DB_PORT: ${${self:custom.env}:DB_PORT}
+      DB_NAME: ${file(./env.json):DB_NAME}
+      DB_USER: ${file(./env.json):DB_USER}
+      DB_PASS: ${file(./env.json):DB_PASS}
+      DB_HOST: ${file(./env.json):DB_HOST}
+      DB_PORT: ${file(./env.json):DB_PORT}
     events:
       - httpApi: '*'
 
