tested local & production working well

--- a/.github/workflows/deploy-master.yml
+++ b/.github/workflows/deploy-master.yml
@@ -53,4 +53,8 @@ jobs:
     - name: Serverless Deploy
       run: |
         serverless deploy
+
+    - name: Remove env json file after deployment
+      run: |
+        sudo rm env.json || true
       
