sequelize tested & working well dev. and prod.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "sourceMap": true,
         "esModuleInterop": true,
-        "module": "commonjs",
+        "module": "CommonJS",
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
         "moduleResolution": "node",
