--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "pg-hstore": "^2.3.4",
+    "reflect-metadata": "^0.1.13",
     "sequelize": "^6.21.2",
     "sequelize-typescript": "^2.1.3",
     "serverless-http": "^3.0.1",
