--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "dev": "cross-env NODE_ENV=development sls offline start --stage offline"
   },
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
